--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "@fortawesome/react-fontawesome": "^0.1.15",
     "graphql": "^15.6.1",
     "next": "11.1.2",
+    "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-helmet-async": "^1.1.2",
-    "react-hook-form": "^7.17.1",
+    "react-hook-form": "^7.17.2",
     "styled-components": "^5.3.1",
     "styled-reset": "^4.3.4"
   },
